--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^3.1.2",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
     "nuxt": "^3.17.3",
     "openai": "^4.100.0",
+    "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7"
   }
 }
