--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
     "nuxt": "^3.17.3",
+    "nuxt-lucide-icons": "^1.0.5",
     "openai": "^4.100.0",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
